# redup.python.service.example

./: Dockerfile  README.md
.github/workflows/: docker-publish.yml  docker-test.yml
config/: config.yaml
src/: pyproject.toml  requirements.txt
src/redup_service_example/: __init__.py  service.py
src/redup_service_example/prototype/: __init__.py  worker.py
